--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,13 +14,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
       
-    - name: Install Node
-      run: npm ci
-      env:
-        CI: true
+    - name: actions-yarn
+      uses: CultureHQ/actions-yarn@master
+      with:
+        args: install
     
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.0.0
